--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INBOXARMOR: SPAM ALERT SYSTEM</title>
+    <title>PREVENTIA: SPAM ALERT SYSTEM</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/index.css">
 
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand">InboxArmor: Spam Alert System</a>
+        <a class="navbar-brand">Preventia: Spam Alert System</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,7 +37,7 @@
     <div id="abstract" class="container mt-5">
         <h1>Abstract</h1>
         <p>In the ever-evolving landscape of digital communication, the proliferation of spam content continues to be a pressing concern.
-        The "InboxArmor: Spam Alert System" project aims to tackle this challenge head-on by implementing a comprehensive and intelligent solution for identifying and classifying spam.
+        The "Preventia: Spam Alert System" project aims to tackle this challenge head-on by implementing a comprehensive and intelligent solution for identifying and classifying spam.
         Through the application of the Naive Bayes algorithm, the system gains the ability to process vast amounts of data efficiently and make probabilistic predictions about whether incoming content is spam or legitimate.
         To bolster its capabilities further, the Spam Alert System integrates cutting edge technologies like natural language processing (NLP) to comprehend textual content more effectively.
         Subsequently, the Naive Bayes classifier evaluates the content, assigning a probability score that determines the likelihood of it being spam.
@@ -45,7 +45,7 @@
         With seamless integration into popular communication platforms, users can enjoy real-time defence against malicious content across email, messaging services, and web browsers.</p>
     </div>
     <footer class="footer">
-        <p>&copy; 2024 InboxArmor: Spam Alert System.</p>
+        <p>&copy; 2024 Preventia: Spam Alert System.</p>
         <p>
             Creators<br>
             <a href= "#">Yash Gupta</a> |
